@@ -1,4 +1,4 @@
-$Id: History,v 1.18 2002-06-05 12:13:03 maire Exp $
+$Id: History,v 1.19 2002-12-05 17:11:11 gcosmo Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -14,9 +14,12 @@ track of all tags.
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+05-12-02 cosmo (testem3-V04-01-00)
+- Fixes to runAction for porting on gcc-3.2 compiler.
      
 03-06-02 mma (testem3-V04-00-01)
--old histograming package clhep/hist replaced by AIDA 2.2/anaphe
+- old histograming package clhep/hist replaced by AIDA 2.2/anaphe
      
 14-02-02 mma (testem3-V04-00-00) 
 - macros for em_exercices 
